GNOME Bugzilla – Bug 748496
libde265: Fails to build due to werrors about wrong format
Last modified: 2015-04-27 14:34:03 UTC
Size is gsize, but the code uses %ld to print it.
Created attachment 302397 [details] [review] libde265: Fix format string for gsize
Attachment 302397 [details] pushed as 283fc20 - libde265: Fix format string for gsize
Review of attachment 302397 [details] [review]: I had to fix the indention, coding style says you should not have lines larger then 80 characters. Please don't disable commit hooks for further submissions.