libde265: Fix format string for gsize

https://bugzilla.gnome.org/show_bug.cgi?id=748496